[package]
name = "mol"
version = "0.3.0"
authors = ["Dmitry Dodzin <d.dodzin@gmail.com>"]
edition = "2018"
categories = ["development-tools::cargo-plugins"]
license = "MIT"
description = "Package versioning with ease"
repository = "https://github.com/DmitryDodzin/mol"
readme = "README.md"
keywords = ["cargo", "versioning", "changeset", "changesets"]

[[bin]]
required-features = ["cargo"]
name = "cargo-mol"

[features]
default = ["cargo"]
cargo = [
  "mol-cargo",
  "tokio/macros",
  "tokio/rt-multi-thread"
]

[dependencies]
mol-cargo = { path = 'crates/mol-cargo', version = "0.3", optional = true }
mol-core = { path = 'crates/mol-core', version = "0.3" }

anyhow = "1"
async-trait = "0.1"
clap = { version = "3.0.0-rc.0", features = ["derive"] }
dialoguer = "0.9"
faker_rand = "0.1"
lazy_static = "1"
rand = "0.8"
tokio = { version = "1", features = [] }

[dev-dependencies]
cargo-husky = { version = "1", features = ["run-cargo-fmt","run-cargo-clippy"] }

[workspace]
members = [
  "crates/*"
]

[profile.release]
opt-level = "s"
