[package]
name = "lightbringer"
version = "0.1.0"
authors = ["Dmitry Dodzin <d.dodzin@gmail.com>"]
edition = "2018"


[features]
default = []
cargo = ["lightbringer-cargo"]

[dependencies]
lightbringer-core = { path = '../lightbringer-core' }
clap = "3.0.0-beta.2"
dialoguer = "0.8"
failure = "0.1"

lightbringer-cargo = { path = '../lightbringer-cargo', optional = true }