[package]
name = "lightbringer-core"
version = "0.1.0"
authors = ["Dmitry Dodzin <d.dodzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
tokio = { version = "1", features = ["fs", "io-util"] }
failure = "0.1"