[package]
name = "mol-cargo"
version = "0.1.0"
authors = ["Dmitry Dodzin <d.dodzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mol-core = { path = '../mol-core', version = "0.1" }

async-recursion = "0.3"
async-trait = "0.1"
dashmap = "4"
failure = "0.1"
futures = "0.3"
globset = "0.4"
tokio = { version = "1", features = ["rt", "fs"] }
toml_edit = "0.9"