[package]
name = "mol-cargo"
version = "0.1.0"
authors = ["Dmitry Dodzin <d.dodzin@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Cargo bindings for mol crate"
repository = "https://github.com/DmitryDodzin/mol"
readme = "README.md"

[dependencies]
mol-core = { path = '../mol-core', version = "0.1" }

async-recursion = "0.3"
async-trait = "0.1"
dashmap = "4"
dunce = "1"
failure = "0.1"
futures = "0.3"
globset = "0.4"
tokio = { version = "1", features = ["fs", "process", "rt"] }
toml_edit = "0.9"