[package]
name = "mol-cargo"
version = "0.3.0"
authors = ["Dmitry Dodzin <d.dodzin@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Cargo bindings for mol crate"
repository = "https://github.com/DmitryDodzin/mol"
readme = "README.md"

[dependencies]
mol-core = { path = '../mol-core', version = "0.3"}

anyhow = "1"
async-trait = "0.1"
dashmap = "4"
dunce = "1"
hyper = { version = "0.14", features = ["client", "http1", "runtime", "tcp"] }
hyper-tls = "0.5"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "process"] }
toml_edit = "0.10"
