[package]
name = "mol-core"
version = "0.2.0"
authors = ["Dmitry Dodzin <d.dodzin@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Core Libraray for mol crate"
repository = "https://github.com/DmitryDodzin/mol"
readme = "README.md"


[dependencies]
async-trait = "0.1"
itertools = "0.10"
tokio = { version = "1", features = ["fs", "io-util"] }
