[package]
name = "mol-core"
version = "0.4.0"
authors = ["Dmitry Dodzin <d.dodzin@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Core Libraray for mol crate"
repository = "https://github.com/DmitryDodzin/mol"
readme = "README.md"

[features]
default = []

[dependencies]
anyhow = "1"
async-recursion = "1"
async-trait = "0.1"
dashmap = "5"
faker_rand = "0.1"
futures = "0.3"
globset = "0.4"
itertools = "0.10"
libloading = "0.7"
lazy_static = "1"
rand = "0.8"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "rt"] }

[build-dependencies]
rustc_version = "0.4"
