[package]
name = "mol-git"
version = "0.1.0"
authors = ["Dmitry Dodzin <d.dodzin@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Mol Git plugin"
repository = "https://github.com/DmitryDodzin/mol"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mol-core = { path = '../mol-core', version = "0.2"}

git2 = "0.13"
