[package]
name = "mol-git"
version = "0.0.0"
authors = ["Dmitry Dodzin <d.dodzin@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Mol Git plugin"
repository = "https://github.com/DmitryDodzin/mol"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mol-core = { path = '../mol-core', version = "0.2", features = ["derive"]}

git2 = "0.13"
