[package]
name = "mol-octokit"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mol-core = { path = "../mol-core", version = "0.3" }
octokit-ntex = { path = "../octokit-ntex", version = "0.0" }
octokit-webhooks = { path = "../octokit-webhooks", version = "0.0" }

async-trait = "0.1"
anyhow = "1"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
ntex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
