[package]
name = "mol-octokit"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mol-core = { path = "../mol-core", version = "0.3" }
octokit-hyper = { path = "../octokit-hyper", version = "0.0", default-features = false, features = ["client"] }
octokit-ntex = { path = "../octokit-ntex", version = "0.0" }
octokit-webhooks = { path = "../octokit-webhooks", version = "0.0", default-features = false }

async-trait = "0.1"
anyhow = "1"
clap = { version = "3", features = ["derive", "env"] }
chrono = "0.4"
ntex = { version = "0.5", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
