[package]
name = "octokit-ntex"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octokit-webhooks = { path = "../octokit-webhooks", version = "0.0", default-features = false, features = ["json"] }

anyhow = "1"
async-trait = "0.1"
env_logger = "0.9"
futures-util = "0.3"
hmac = "0.12"
ntex = "0.4"
serde_json = "1"
serde_plain = "1"
serde_urlencoded = "0.7"
subtle = "2.4"
sha2 = "0.10"
