[package]
name = "octokit-webhooks"
version = "0.0.0"
authors = ["Dmitry Dodzin <d.dodzin@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Github Octokit webhook payload types"
repository = "https://github.com/DmitryDodzin/mol"
readme = "README.md"

[features]
default = ["json"]
json = ["serde_json"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "1"


[dev-dependencies]
serde_json = "1"