[package]
name = "octokit-webhooks"
version = "0.0.0"
authors = ["Dmitry Dodzin <d.dodzin@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Github Octokit webhook payload types"
repository = "https://github.com/DmitryDodzin/mol"
readme = "README.md"

[features]
default = ["json"]
json = ["serde_json"]

[dependencies]
octokit-hyper = { path = "../octokit-hyper", version = "0.0", default-features = false }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

serde_json = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"